--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MADPractical3_20012021046"
         tools:targetApi="31">
+
         <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RegistrationActivity"
-            android:exported="false" />
-        <activity
+            android:noHistory="true"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -28,6 +24,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:noHistory="true"
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:label="Login UI-MAD Practical"
+            >
+        </activity>
+        <activity
+            android:noHistory="true"
+            android:name=".RegistrationActivity"
+            android:exported="false"
+            android:label="Registration UI-MAD Practical"
+            >
+        </activity>
+
     </application>
+
 
 </manifest>
